# gamma-spectroscopy-pico-noscope

./: pyproject.toml
gamma_spectroscopy/models/: fake_picoscope.py
gamma_spectroscopy/views/: Qt5_gui.py  Qt6_gui.py  Qt6_ui.ui
src/GammaSpectroscopyPicoNoscope/controllers/: picoscope_5000a.py
src/GammaSpectroscopyPicoNoscope/picosdk/: GammaSpectroscopyPicoNoscope - Shortcut.lnk
src/GammaSpectroscopyPicoNoscope/views/: Qt5_gui.py  Qt6_gui.py  Qt6_main_ui.py  Qt6_ui.ui
