[tool.poetry]
name = "GammaSpectroscopyPicoNoscope"
version = "0.1.0"
description = ""
authors = ["TasBakker <ties.blokker@student.uva.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
pyside6 = "^6.8.1"
pyqtgraph = "^0.13.7"
numpy = "^2.1.3"
picosdk = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gamma-spectroscopy = 'GammaSpectroscopyPicoNoscope.views.Qt6_gui:main'
